err/juicer.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/juicer'...
Listing './lib/python3.5/site-packages/juicer/admin'...
Compiling './lib/python3.5/site-packages/juicer/admin/JuicerAdmin.py'...
***   File "./lib/python3.5/site-packages/juicer/admin/JuicerAdmin.py", line 124
    except JuicerRepoDefError, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/juicer/admin/__init__.py'...
***   File "./lib/python3.5/site-packages/juicer/admin/__init__.py", line 126
    print juicer.utils.create_json_str(repo_lists, indent=4)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/juicer/common'...
Listing './lib/python3.5/site-packages/juicer/juicer'...
Compiling './lib/python3.5/site-packages/juicer/juicer/Juicer.py'...
***   File "./lib/python3.5/site-packages/juicer/juicer/Juicer.py", line 418
    print 'error: cart \'%s\' does not exist' % cartname
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/juicer/juicer/__init__.py'...
***   File "./lib/python3.5/site-packages/juicer/juicer/__init__.py", line 56
    print cart
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/juicer/utils'...
Compiling './lib/python3.5/site-packages/juicer/utils/Log.py'...
***   File "./lib/python3.5/site-packages/juicer/utils/Log.py", line 111
    print l
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/juicer/utils/ValidateRepoDef.py'...
***   File "./lib/python3.5/site-packages/juicer/utils/ValidateRepoDef.py", line 42
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/juicer/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/juicer/utils/__init__.py", line 95
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/juicer/utils/texttable.py'...
***   File "./lib/python3.5/site-packages/juicer/utils/texttable.py", line 190
    raise ArraySizeError, "array should contain 4 characters"
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/juicer-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
